--- a/roles/falcon_install/tasks/install.yml
+++ b/roles/falcon_install/tasks/install.yml
@@ -25,12 +25,11 @@
     - falcon_gpg_key_check
     - ansible_facts['pkg_mgr'] in rpm_packagers
 
-- name: CrowdStrike Falcon | Import CrowdStrike Falcon APT GPG key from files
+- name: CrowdStrike Falcon | Import CrowdStrike Falcon APT GPG key from file
   ansible.builtin.apt_key:
-    file: '{{ falcon_install_temp_directory.path }}/{{ item }}'
+    file: '{{ falcon_install_temp_directory.path }}/{{ latest_gpg_key }}'
     state: present
   changed_when: no
-  loop: "{{ falcon_gpg_keys }}"
   when:
     - falcon_gpg_key_check
     - ansible_facts['pkg_mgr'] in dpkg_packagers
