--- a/roles/falcon_install/vars/main.yml
+++ b/roles/falcon_install/vars/main.yml
@@ -15,6 +15,8 @@ falcon_gpg_keys:
   - falcon-sensor.gpg
   - falcon-sensor2.gpg
 
+latest_gpg_key: "{{ falcon_gpg_keys[0] }}"
+
 falcon_cloud_urls:
   us-1: "api.crowdstrike.com"
   us-2: "api.us-2.crowdstrike.com"
