Updated the rest of the molecule configs

--- a/molecule/win_falcon_uninstall/molecule.yml
+++ b/molecule/win_falcon_uninstall/molecule.yml
@@ -14,7 +14,8 @@ platforms:
     region: "${MOLECULE_REGION:-us-west-2}"
     vpc_subnet_id: "${MOLECULE_VPC_SUBNET_ID}"
     key_inject_method: ec2
-    security_group_restrict_cidr_ip: true
+    security_group_restrict_cidr_ip: "${MOLECULE_SECURITY_GROUP_RESTRICT_CIDR_IP:-true}"
+    boot_wait_seconds: ${MOLECULE_BOOT_WAIT_SECONDS:-60}
     connection_options:
       sudo: False
       ansible_user: Administrator
