--- a/.github/workflows/win_falcon_configure.yml
+++ b/.github/workflows/win_falcon_configure.yml
@@ -66,6 +66,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+          cache: 'pip'
+          cache-dependency-path: '.github/workflows/win_falcon_configure.yml'
 
       - name: Install dependencies
         run: |
@@ -100,7 +102,7 @@ jobs:
           command: >-
             molecule --version &&
             ansible --version &&
-            molecule --debug test --destroy never -s ${{ matrix.collection_role }} -- -v -e "falcon_skip_kernel_compat_check=yes"
+            molecule --debug test --destroy never -s ${{ matrix.collection_role }} -- -v"
         continue-on-error: true
 
       - name: Ensure instances are destroyed
