--- a/.github/workflows/win_falcon_configure.yml
+++ b/.github/workflows/win_falcon_configure.yml
@@ -102,7 +102,7 @@ jobs:
           command: >-
             molecule --version &&
             ansible --version &&
-            molecule --debug test --destroy never -s ${{ matrix.collection_role }} -- -v"
+            molecule --debug test --destroy never -s ${{ matrix.collection_role }} -- -v
         continue-on-error: true
 
       - name: Ensure instances are destroyed
