dest should follow same convention as linux
The temp file path will be where the file is downloaded to. This
does not impact the name. If you have a url http://example.com/path/to/sensor.exe
then it will be falcon_windows_tmp_dir.path/sensor.exe

--- a/roles/falcon_install/tasks/win_url.yml
+++ b/roles/falcon_install/tasks/win_url.yml
@@ -2,7 +2,7 @@
 - name: CrowdStrike Falcon | Downloading Installation Package from URL (Windows)
   ansible.windows.win_get_url:
     url: "{{ falcon_download_url }}"
-    dest: "{{ falcon_windows_tmp_dir }}\\falcon-sensor.exe"
+    dest: "{{ falcon_windows_tmp_dir.path }}"
     url_username: "{{ falcon_download_url_username | default(omit) }}"
     url_password: "{{ falcon_download_url_password | default(omit) }}"
   when:
