--- a/changelogs/fragments/url_ability_for_windows.yml
+++ b/changelogs/fragments/url_ability_for_windows.yml
@@ -1,2 +1,5 @@
 minor_changes:
 - falcon_install - add the ability to install from an URL for windows (https://github.com/CrowdStrike/ansible_collection_falcon/pull/363)
+
+bugfixes:
+- falcon_install - use tmp path instead of hardcoding sensor name (https://github.com/CrowdStrike/ansible_collection_falcon/pull/368)
