--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -1,10 +1,16 @@
-molecule[docker,lint]
-ansible
+molecule
+molecule-plugins[ec2]
 yamllint
-ansible-lint
-python-vagrant
-molecule-vagrant
 flake8
 pylint
 pre-commit
 autopep8
+ansible
+ansible-core
+ansible-lint
+boto3
+botocore
+pywinrm
+wheel
+ansible-rulebook
+ansible-runner
