--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,7 +10,7 @@ ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && bash /tmp/library-scripts/common-debian.sh "${INSTALL_ZSH}" "${USERNAME}" "${USER_UID}" "${USER_GID}" "${UPGRADE_PACKAGES}" "true" "true" \
-    && apt-get install -y libssl-dev libffi-dev python3-dev python3-pip openjdk-17-jdk vim \
+    && apt-get install -y libssl-dev libffi-dev python3-dev python3-pip vim \
     && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
 # Install Ansible + Dependencies
