--- a/rulebooks/event_stream_example.yml
+++ b/rulebooks/event_stream_example.yml
@@ -5,10 +5,11 @@
     - crowdstrike.falcon.eventstream:
         falcon_client_id: "{{ FALCON_CLIENT_ID }}"
         falcon_client_secret: "{{ FALCON_CLIENT_SECRET }}"
-        falcon_cloud: "{{ FALCON_CLOUD | default('us-1') }}"
-        stream_name: "{{stream_name | default('eda')}}"
+        falcon_cloud: "{{ FALCON_CLOUD | default('us-2') }}"
+        stream_name: "{{ stream_name | default('eda-test') }}"
+        # offset: "{{offset | default('now')}}"
         include_event_types:
-          - "AuthActivityAuditEvent"
+          - "DetectionSummaryEvent"
 
   rules:
     - name: print output
