--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -54,13 +54,17 @@
 			},
 			"[python]": {
 				"editor.tabSize": 4
-			}
+			},
+			"ansible.python.interpreterPath": "/usr/bin/python3"
 		}
 	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "ansible-galaxy collection install ansible.windows",
+	"postCreateCommand": "ansible-galaxy collection install ansible.windows ansible.eda",
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	"remoteUser": "vscode",
+	"features": {
+		"ghcr.io/devcontainers/features/java:1": {}
+	}
 }
