adding eda tag for aap visibility

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -45,6 +45,7 @@ tags:
   - security
   - edr
   - xdr
+  - eda
 
 # Collections that this collection requires to be installed for it to be usable. The key of the dict is the
 # collection label 'namespace.name'. The value is a version range
