tox + pylint/darglint fixes

--- a/.pylintrc
+++ b/.pylintrc
@@ -160,6 +160,7 @@ disable=raw-checker-failed,
         missing-module-docstring,
         too-few-public-methods,
         useless-object-inheritance,  # Remove when we no longer run on python2 systems
+        too-many-instance-attributes,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -396,8 +397,8 @@ preferred-modules=
 [EXCEPTIONS]
 
 # Exceptions that will emit a warning when caught.
-overgeneral-exceptions=BaseException,
-                       Exception
+overgeneral-exceptions=builtins.BaseException,
+                       builtins.Exception
 
 
 [REFACTORING]
