--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,4 @@
+# Recommended usage of this file is detailed in https://github.com/ansible/eda-partner-testing/blob/main/README.md.
 [tox]
 envlist = ruff, darglint, pylint
 skipsdist = true
@@ -14,14 +15,22 @@ commands =
 [testenv:ruff]
 deps = ruff
 commands =
-    bash -c 'ruff check --exclude .tox --select ALL --ignore INP001 -q extensions/eda/plugins'
+    bash -c 'ruff check --exclude .tox --select ALL --ignore INP001,RUF100,E501,FA100,FA102,PLR0913,PERF203,BLE001 -q extensions/eda/plugins'
 
 [testenv:darglint]
 deps = darglint
 commands =
     bash -c 'darglint -s numpy -z full extensions/eda/plugins'
 
+[testenv:isort]
+deps = isort
+commands = isort {toxinidir}
+
+[testenv:black]
+deps = black
+commands = black {toxinidir}
+
 [testenv:pylint]
 deps = pylint
 commands =
-    bash -c 'find ./extensions/eda/plugins -name "*.py" -print0 | xargs -0 pylint --output-format=parseable -sn --disable R0801'
+    bash -c 'find ./extensions/eda/plugins -name "*.py" -print0 | xargs -0 pylint --output-format=parseable -sn --disable R0801,R0903,R0913,W0105'
