remove base_url from auth to be inline with cloud
This removes any potential confusion. Adds helper function to
translate base_url to cloud. Updates verbiage for docs.

--- a/tests/module-test.yml
+++ b/tests/module-test.yml
@@ -5,7 +5,7 @@
   gather_facts: no
 
   tasks:
-  - name: Generate Authentication Credentials (access token and base URL)
+  - name: Generate Authentication Credentials (access token and cloud region)
     crowdstrike.falcon.auth:
     register: falcon
 
