Fix issue with remove aid not having become clause

--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -25,6 +25,8 @@
   when:
     - falcon_remove_aid
     - ansible_facts['os_family'] != "Windows"
+  become: true
+  become_user: root
   block:
     - ansible.builtin.include_tasks: remove_aid.yml
       # noqa name[missing]
