--- a/roles/falcon_uninstall/vars/main.yml
+++ b/roles/falcon_uninstall/vars/main.yml
@@ -1,2 +1,7 @@
 ---
 # vars file for falcon_uninstall
+falcon_cloud_urls:
+  us-1: "api.crowdstrike.com"
+  us-2: "api.us-2.crowdstrike.com"
+  eu-1: "api.eu-1.crowdstrike.com"
+  us-gov-1: "api.laggar.gcw.crowdstrike.com"
