--- a/roles/falcon_uninstall/tasks/main.yml
+++ b/roles/falcon_uninstall/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 # tasks file for falcon_uninstall
+- name: Uninstall pretasks
+  ansible.builtin.include_tasks: preuninstall.yml
+  # noqa name[missing]
+
 - name: API block
   when:
     - falcon_client_id and falcon_client_secret
@@ -9,9 +13,14 @@
         tasks_from: "{{ 'win_auth.yml' if ansible_facts['os_family'] == 'Windows' else 'auth.yml' }}"
       # noqa name[missing]
 
-# pretasks playbook
-- name: Uninstall pretasks
-  ansible.builtin.include_tasks: pretasks.yml
+- name: Remove/Hide Host pretasks
+  when:
+    - falcon_api_oauth2_token | length > 0
+    - falcon_remove_host
+    - falcon_sensor_installed
+  block:
+    - ansible.builtin.include_tasks: remove_host_pretasks.yml
+      # noqa name[missing]
 
 - name: Linux Block
   when:
@@ -36,7 +45,7 @@
 - name: Hide host
   when:
     - falcon_client_id and falcon_client_secret
-    - falcon_uninstall_remove_aid | length > 0
+    - falcon_uninstall_remove_aid is defined
   block:
     - ansible.builtin.include_tasks: hide_host.yml
       # noqa name[missing]
