Adding molecule support for testing changes
Plus some minor fixes/tweaks for windows uninstall stuff

--- a/molecule/falcon_uninstall/prepare.yml
+++ b/molecule/falcon_uninstall/prepare.yml
@@ -2,6 +2,9 @@
 - name: Prepare
   hosts: all
   become: yes
+  vars:
+    falcon_client_id: "{{ lookup('env', 'FALCON_CLIENT_ID') }}"
+    falcon_client_secret: "{{ lookup('env', 'FALCON_CLIENT_SECRET') }}"
   tasks:
     # Ubuntu specific
     - name: Install apt dependencies
@@ -21,6 +24,7 @@
     - name: Run falcon_install role
       ansible.builtin.include_role:
         name: crowdstrike.falcon.falcon_install
-      vars:
-        falcon_client_id: "{{ lookup('env', 'FALCON_CLIENT_ID') }}"
-        falcon_client_secret: "{{ lookup('env', 'FALCON_CLIENT_SECRET') }}"
+
+    - name: Configure Falcon Sensor
+      ansible.builtin.include_role:
+        name: crowdstrike.falcon.falcon_configure
