--- a/molecule/falcon_uninstall/converge.yml
+++ b/molecule/falcon_uninstall/converge.yml
@@ -2,5 +2,10 @@
 - name: Converge
   hosts: all
   become: yes
+  vars:
+    falcon_client_id: "{{ lookup('env', 'FALCON_CLIENT_ID') }}"
+    falcon_client_secret: "{{ lookup('env', 'FALCON_CLIENT_SECRET') }}"
   roles:
     - role: crowdstrike.falcon.falcon_uninstall
+      vars:
+        falcon_remove_host: yes
