--- a/molecule/win_falcon_uninstall/converge.yml
+++ b/molecule/win_falcon_uninstall/converge.yml
@@ -1,5 +1,10 @@
 ---
 - name: Converge
   hosts: all
+  vars:
+    falcon_client_id: "{{ lookup('env', 'FALCON_CLIENT_ID') }}"
+    falcon_client_secret: "{{ lookup('env', 'FALCON_CLIENT_SECRET') }}"
   roles:
     - role: crowdstrike.falcon.falcon_uninstall
+      vars:
+        falcon_remove_host: yes
