--- a/roles/falcon_uninstall/tasks/preuninstall.yml
+++ b/roles/falcon_uninstall/tasks/preuninstall.yml
@@ -24,6 +24,7 @@
     - name: "CrowdStrike Falcon | Check status of Falcon Sensor (Windows)"
       ansible.windows.win_command: sc.exe query csagent
       failed_when: no
+      changed_when: no
       register: win_status
 
     - name: "CrowdStrike Falcon | Check if Sensor is Installed (Windows)"
