--- a/roles/falcon_uninstall/tasks/win_uninstall.yml
+++ b/roles/falcon_uninstall/tasks/win_uninstall.yml
@@ -13,28 +13,13 @@
     state: absent
     creates_service: csfalconservice
     arguments: '/uninstall /quiet {{ falcon_windows_uninstall_args }}'
+  register: falcon_win_sensor_uninstall
   when:
     - falcon_win_sensor_cache.files | length > 0
     - ansible_facts['os_family'] == "Windows"
 
-# The directory C:\Windows\System32\drivers\CrowdStrike is not present
-- name: CrowdStrike Falcon | Check for Windows Sensor directory (Windows)
-  ansible.windows.win_stat:
+- name: CrowdStrike Falcon | Wait for Falcon Sensor to be removed (Windows)
+  ansible.windows.win_wait_for:
     path: C:\Windows\System32\drivers\CrowdStrike
-  register: falcon_win_sensor_dir
-
-- name: CrowdStrike Falcon | Assert Windows Sensor directory is absent (Windows)
-  ansible.builtin.assert:
-    that:
-      - not falcon_win_sensor_dir.stat.exists
-
-# The registry key HKLM\System\Crowdstrike does not appear in the registry
-- name: CrowdStrike Falcon | Check for Windows Sensor registry key (Windows)
-  ansible.windows.win_reg_stat:
-    path: HKLM:\System\Crowdstrike
-  register: falcon_win_sensor_reg
-
-- name: CrowdStrike Falcon | Assert Windows Sensor registry key is absent (Windows)
-  ansible.builtin.assert:
-    that:
-      - not falcon_win_sensor_reg.exists
+    state: absent
+  when: falcon_win_sensor_uninstall.changed  # noqa: no-handler
