--- a/roles/falcon_install/defaults/main.yml
+++ b/roles/falcon_install/defaults/main.yml
@@ -42,18 +42,13 @@ falcon_localfile_cleanup: no
 #
 falcon_gpg_key_check: yes
 
-# CrowdStrike API URL for downloading the Falcon sensor. Possible values:
+# CrowdStrike API Cloud region for downloading the Falcon sensor. Possible values:
 #       us-1:       api.crowdstrike.com
 #       us-2:       api.us-2.crowdstrike.com
 #       eu-1:       api.eu-1.crowdstrike.com
 #       us-gov-1:   api.laggar.gcw.crowdstrike.com
 #
-falcon_cloud: "api.crowdstrike.com"
-
-# Auto-discover the CrowdStrike Cloud API Region. When disabled,
-# 'falcon_cloud' should be changed to the appropriate cloud region.
-#
-falcon_cloud_autodiscover: true
+falcon_cloud: "us-1"
 
 # Your Falcon Customer ID (CID) used to associate your sensor.
 #
