--- a/roles/falcon_install/vars/main.yml
+++ b/roles/falcon_install/vars/main.yml
@@ -24,7 +24,6 @@ falcon_cloud_urls:
   us-gov-1: "api.laggar.gcw.crowdstrike.com"
 
 falcon_os_arch_dict:
-  # exclude arm64 and s390x
-  x86_64: "\"+os_version:!~\"arm64\"+os_version:!~\"zLinux\""
-  aarch64: "\"+os_version:~\"arm64\""
-  s390x: "\"+os_version:~\"zLinux\""
+  x86_64: "+os_version:!~'arm64'+os_version:!~'zLinux'"
+  aarch64: "+os_version:~'arm64'"
+  s390x: "+os_version:~'zLinux'"
