--- a/roles/falcon_install/tasks/api.yml
+++ b/roles/falcon_install/tasks/api.yml
@@ -60,18 +60,48 @@
     msg: "No Falcon Sensor was found! If passing in falcon_sensor_version, ensure it is correct!"
   when: falcon_api_installer_list.installers[0] is not defined
 
-- name: CrowdStrike Falcon | Download Falcon Sensor Installation Package
-  ansible.builtin.get_url:
-    url: "https://{{ falcon_cloud }}/sensors/entities/download-installer/v1?id={{ falcon_api_installer_list.installers[falcon_sensor_version_decrement | int].sha256 }}"
-    dest: "{{ falcon_install_temp_directory.path }}"
-    checksum: "sha256:{{ falcon_api_installer_list.installers[falcon_sensor_version_decrement | int].sha256 }}"
-    mode: 0640
-    headers:
-      authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
+- name: CrowdStrike Falcon | Download Falcon Sensor Installation Package (local)
+  crowdstrike.falcon.sensor_download:
+    auth: "{{ falcon.auth }}"
+    hash: "{{ falcon_api_installer_list.installers[falcon_sensor_version_decrement | int].sha256 }}"
+    path: "{{ falcon_api_sensor_download_path if falcon_api_sensor_download_path else omit }}"
+    name: "{{ falcon_api_sensor_download_filename if falcon_api_sensor_download_filename else omit }}"
   changed_when: false
   register: falcon_sensor_download
-  no_log: "{{ falcon_api_enable_no_log }}"
+  delegate_to: localhost
 
-- name: CrowdStrike Falcon | Set full file download path
+- name: CrowdStrike Falcon | Copy Sensor Installation Package to remote host (non-windows)
+  ansible.builtin.copy:
+    src: "{{ falcon_sensor_download.dest }}"
+    dest: "{{ falcon_install_temp_directory.path }}"
+    mode: 0640
+  changed_when: false
+  register: falcon_sensor_copied
+  when: ansible_os_family != "Windows"
+
+- name: CrowdStrike Falcon | Copy Sensor Installation Package to remote host (windows)
+  ansible.windows.win_copy:
+    src: "{{ falcon_sensor_download.dest }}"
+    dest: "{{ falcon_install_win_temp_directory.path }}"
+    mode: 0640
+  changed_when: false
+  register: win_falcon_sensor_copied
+  when: ansible_os_family == "Windows"
+
+- name: CrowdStrike Falcon | Remove Downloaded Sensor Installation Package (local)
+  ansible.builtin.file:
+    path: "{{ falcon_sensor_download.dest }}"
+    state: absent
+  changed_when: false
+  delegate_to: localhost
+  when: falcon_api_sensor_download_cleanup
+
+- name: CrowdStrike Falcon | Set full file download path (non-windows)
   ansible.builtin.set_fact:
-    falcon_sensor_pkg: "{{ falcon_sensor_download.dest }}"
+    falcon_sensor_pkg: "{{ falcon_sensor_copied.dest }}"
+  when: ansible_os_family != "Windows"
+
+- name: CrowdStrike Falcon | Set full file download path (windows)
+  ansible.builtin.set_fact:
+    falcon_sensor_pkg: "{{ win_falcon_sensor_copied.dest }}\\{{ win_falcon_sensor_copied.original_basename }}"
+  when: ansible_os_family == "Windows"
