--- a/roles/falcon_install/tasks/preinstall.yml
+++ b/roles/falcon_install/tasks/preinstall.yml
@@ -22,6 +22,13 @@
         msg: "falcon_sensor_version_decrement must be an integer between 0 and 5 inclusive!"
       when: falcon_sensor_version_decrement | int < 0 or falcon_sensor_version_decrement | int > 5
 
+- name: CrowdStrike Falcon | Validate CID is defined (non-api)
+  ansible.builtin.fail:
+    msg: "falcon_cid is not defined! Please set falcon_cid and re-run the installation again!"
+  when:
+    - falcon_install_method != "api"
+    - not falcon_cid
+
 - name: "CrowdStrike Falcon | Configure Python Interpreter for older Linux OSes"
   ansible.builtin.set_fact:
     ansible_python_interpreter: /usr/bin/python
