--- a/roles/falcon_install/tasks/api.yml
+++ b/roles/falcon_install/tasks/api.yml
@@ -64,8 +64,8 @@
   crowdstrike.falcon.sensor_download:
     auth: "{{ falcon.auth }}"
     hash: "{{ falcon_api_installer_list.installers[falcon_sensor_version_decrement | int].sha256 }}"
-    dest: "{{ falcon_api_sensor_download_path if falcon_api_sensor_download_path else omit }}"
-    name: "{{ falcon_api_sensor_download_filename if falcon_api_sensor_download_filename else omit }}"
+    dest: "{{ falcon_api_sensor_download_path | default(omit, true) }}"
+    name: "{{ falcon_api_sensor_download_filename | default(omit, true) }}"
   changed_when: false
   register: falcon_sensor_download
   delegate_to: localhost
