--- a/roles/falcon_install/tasks/api.yml
+++ b/roles/falcon_install/tasks/api.yml
@@ -1,131 +1,107 @@
 ---
-# Block when falcon_sensor_update_policy_name is supplied
-- name: Build Sensor Update Policy Block (Linux)
-  when:
-    - falcon_sensor_update_policy_name
-    - falcon_sensor_update_policy_platform == 'Linux'
-  block:
-    - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query (Linux)"
-      ansible.builtin.set_fact:
-        falcon_sensor_update_policy_query: "{{ 'platform_name:\"' + falcon_sensor_update_policy_platform + '\"+name.raw:\"' + falcon_sensor_update_policy_name + '\"' }}"
-
-    - name: "CrowdStrike Falcon | Search for Sensor Update Policy (Linux)"
-      ansible.builtin.uri:
-        url: "https://{{ falcon_cloud }}/policy/combined/sensor-update/v2?filter={{ falcon_sensor_update_policy_query | urlencode }}"
-        method: GET
-        return_content: true
-        headers:
-          authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
-          Content-Type: application/json
-      register: falcon_sensor_update_policy_info_linux
-      no_log: "{{ falcon_api_enable_no_log }}"
-      run_once: "{{ falcon_sensor_update_policy_run_once }}"
-
-- name: Build Sensor Update Policy Block (MacOS)
-  when:
-    - falcon_sensor_update_policy_name
-    - falcon_sensor_update_policy_platform == 'Mac'
-  block:
-    - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query (MacOS)"
-      ansible.builtin.set_fact:
-        falcon_sensor_update_policy_query: "{{ 'platform_name:\"' + falcon_sensor_update_policy_platform + '\"+name.raw:\"' + falcon_sensor_update_policy_name + '\"' }}"
-
-    - name: "CrowdStrike Falcon | Search for Sensor Update Policy (MacOS)"
-      ansible.builtin.uri:
-        url: "https://{{ falcon_cloud }}/policy/combined/sensor-update/v2?filter={{ falcon_sensor_update_policy_query | urlencode }}"
-        method: GET
-        return_content: true
-        headers:
-          authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
-          Content-Type: application/json
-      register: falcon_sensor_update_policy_info_mac
-      no_log: "{{ falcon_api_enable_no_log }}"
-      run_once: "{{ falcon_sensor_update_policy_run_once }}"
-
 - name: Sensor Update Policy Block
   when:
     - falcon_sensor_update_policy_name
   block:
-    # Set falcon_sensor_update_policy_info fact based on platform
-    - name: "CrowdStrike Falcon | Set falcon_sensor_update_policy_info fact based on platform"
+    - name: "CrowdStrike Falcon | Build Sensor Update Policy API Query"
       ansible.builtin.set_fact:
-        falcon_sensor_update_policy_info: "{{ falcon_sensor_update_policy_info_linux if falcon_sensor_update_policy_platform == 'Linux' else falcon_sensor_update_policy_info_mac }}"
+        falcon_sensor_update_policy_filter: "platform_name:'{{ falcon_sensor_update_policy_platform }}'+name.raw:'{{ falcon_sensor_update_policy_name }}'"
+
+    - name: CrowdStrike Falcon | Search for Sensor Update Policy
+      crowdstrike.falcon.sensor_update_policy_info:
+        auth: "{{ falcon.auth }}"
+        filter: "{{ falcon_sensor_update_policy_filter }}"
+      register: falcon_sensor_update_policy_info
+      delegate_to: localhost
 
     - name: "CrowdStrike Falcon | Validate Sensor Update Policy request"
       ansible.builtin.fail:
         msg: "No Falcon Sensor Update Policy with name: {{ falcon_sensor_update_policy_name }} was found!"
-      when: falcon_sensor_update_policy_info.json.resources[0] is not defined
+      when: falcon_sensor_update_policy_info.policies is not defined
 
     - name: "CrowdStrike Falcon | Validate Sensor Update Policy request for aarch64 architectures"
       ansible.builtin.fail:
         msg: "No Falcon Sensor Update Policy with name: {{ falcon_sensor_update_policy_name }} and enabled for aarch64 was found!"
       when:
-        - falcon_sensor_update_policy_info.json.resources[0].settings.variants[0] is not defined
+        - falcon_sensor_update_policy_info.policies[0].settings.variants[0] is not defined
         - ansible_facts['machine'] == "aarch64"
 
     - name: "CrowdStrike Falcon | Get the Falcon Sensor version from Update Policy"
       ansible.builtin.set_fact:
-        falcon_sensor_update_policy_package_version: "{{ falcon_sensor_update_policy_info.json.resources[0].settings.sensor_version }}"
+        falcon_sensor_update_policy_package_version: "{{ falcon_sensor_update_policy_info.policies[0].settings.sensor_version }}"
       when: ansible_facts['machine'] != "aarch64"
 
     - name: "CrowdStrike Falcon | Get the Falcon Sensor version from Update Policy for aarch64 architecture"
       ansible.builtin.set_fact:
-        falcon_sensor_update_policy_package_version: "{{ falcon_sensor_update_policy_info.json.resources[0].settings.variants[0].sensor_version }}"
+        falcon_sensor_update_policy_package_version: "{{ falcon_sensor_update_policy_info.policies[0].settings.variants[0].sensor_version }}"
       when: ansible_facts['machine'] == "aarch64"
 
-    - name: "CrowdStrike Falcon | Build API Sensor Query based on Sensor Update Policy (Linux)"
+    - name: CrowdStrike Falcon | Override falcon_sensor_version with version from Sensor Update Policy
       ansible.builtin.set_fact:
-        falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"+version:\"' + falcon_sensor_update_policy_package_version + falcon_os_arch }}"
-      when: ansible_facts['system'] == "Linux"
+        falcon_sensor_version: "+version:'{{ falcon_sensor_update_policy_package_version }}'"
 
-    - name: "CrowdStrike Falcon | Build API Sensor Query based on Sensor Update Policy (MacOS)"
-      ansible.builtin.set_fact:
-        falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"+version:\"' + falcon_sensor_update_policy_package_version + '\"' }}"
-      when: ansible_facts['system'] == "Darwin"
 
-- name: "Build API Sensor Block"
-  when: not falcon_sensor_update_policy_name
-  block:
-    - name: "CrowdStrike Falcon | Build API Sensor Query (Linux)"
-      ansible.builtin.set_fact:
-        falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + falcon_os_arch + '+version:\"' + falcon_sensor_version + '\"'
-          if (falcon_sensor_version) else 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + falcon_os_arch }}"
-      when: ansible_facts['system'] == "Linux"
+- name: "CrowdStrike Falcon | Build API Sensor Query"
+  ansible.builtin.set_fact:
+    falcon_os_query: "os:'{{ falcon_target_os }}'+os_version:'{{ falcon_os_version }}'\
+      {{ falcon_os_arch | default('') }}{{ falcon_sensor_version | default('') }}"
 
-    - name: "CrowdStrike Falcon | Build API Sensor Query (MacOS)"
-      ansible.builtin.set_fact:
-        falcon_os_query: "{{ 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"+version:\"' + falcon_sensor_version + '\"'
-          if (falcon_sensor_version) else 'os:\"' + falcon_target_os + '\"+os_version:\"' + falcon_os_version + '\"' }}"
-      when: ansible_facts['system'] == "Darwin"
 
 - name: CrowdStrike Falcon | Get list of filtered Falcon sensors
-  ansible.builtin.uri:
-    url: "https://{{ falcon_cloud }}/sensors/combined/installers/v1?sort=version|desc&filter={{ falcon_os_query | urlencode }}"
-    method: GET
-    return_content: true
-    headers:
-      authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
-      Content-Type: application/json
+  crowdstrike.falcon.sensor_download_info:
+    auth: "{{ falcon.auth }}"
+    filter: "{{ falcon_os_query }}"
+    sort: "version|desc"
   register: falcon_api_installer_list
-  no_log: "{{ falcon_api_enable_no_log }}"
+  delegate_to: localhost
 
 - name: CrowdStrike Falcon | Validate Sensor request
   ansible.builtin.fail:
     msg: "No Falcon Sensor was found! If passing in falcon_sensor_version, ensure it is correct!"
-  when: falcon_api_installer_list.json.resources[0] is not defined
+  when: falcon_api_installer_list.installers[0] is not defined
 
-- name: CrowdStrike Falcon | Download Falcon Sensor Installation Package
-  ansible.builtin.get_url:
-    url: "https://{{ falcon_cloud }}/sensors/entities/download-installer/v1?id={{ falcon_api_installer_list.json.resources[falcon_sensor_version_decrement | int].sha256 }}"
-    dest: "{{ falcon_install_temp_directory.path }}"
-    checksum: "sha256:{{ falcon_api_installer_list.json.resources[falcon_sensor_version_decrement | int].sha256 }}"
-    mode: 0640
-    headers:
-      authorization: "Bearer {{ falcon_api_oauth2_token.json.access_token }}"
+- name: CrowdStrike Falcon | Download Falcon Sensor Installation Package (local)
+  crowdstrike.falcon.sensor_download:
+    auth: "{{ falcon.auth }}"
+    hash: "{{ falcon_api_installer_list.installers[falcon_sensor_version_decrement | int].sha256 }}"
+    dest: "{{ falcon_api_sensor_download_path | default(omit, true) }}"
+    name: "{{ falcon_api_sensor_download_filename | default(omit, true) }}"
   changed_when: false
   register: falcon_sensor_download
-  no_log: "{{ falcon_api_enable_no_log }}"
+  delegate_to: localhost
 
-- name: CrowdStrike Falcon | Set full file download path
+- name: CrowdStrike Falcon | Copy Sensor Installation Package to remote host (non-windows)
+  ansible.builtin.copy:
+    src: "{{ falcon_sensor_download.path }}"
+    dest: "{{ falcon_install_temp_directory.path }}"
+    mode: 0640
+  changed_when: false
+  register: falcon_sensor_copied
+  when: ansible_os_family != "Windows"
+
+- name: CrowdStrike Falcon | Copy Sensor Installation Package to remote host (windows)
+  ansible.windows.win_copy:
+    src: "{{ falcon_sensor_download.path }}"
+    dest: "{{ falcon_install_win_temp_directory.path }}"
+    mode: 0640
+  changed_when: false
+  register: win_falcon_sensor_copied
+  when: ansible_os_family == "Windows"
+
+- name: CrowdStrike Falcon | Remove Downloaded Sensor Installation Package (local)
+  ansible.builtin.file:
+    path: "{{ falcon_sensor_download.path }}"
+    state: absent
+  changed_when: false
+  delegate_to: localhost
+  when: falcon_api_sensor_download_cleanup
+
+- name: CrowdStrike Falcon | Set full file download path (non-windows)
   ansible.builtin.set_fact:
-    falcon_sensor_pkg: "{{ falcon_sensor_download.dest }}"
+    falcon_sensor_pkg: "{{ falcon_sensor_copied.dest }}"
+  when: ansible_os_family != "Windows"
+
+- name: CrowdStrike Falcon | Set full file download path (windows)
+  ansible.builtin.set_fact:
+    falcon_sensor_pkg: "{{ win_falcon_sensor_copied.dest }}\\{{ win_falcon_sensor_copied.original_basename }}"
+  when: ansible_os_family == "Windows"
